force-app/main/default/objects/Audit__c/Audit__c.object-meta.xml
<CustomObject>
    <description>Used to track history of or scheduled audits that are required on fed contracts</description>
    <label>Audit</label>
    <nameField>
        <displayFormat>Aud-{0}</displayFormat>
        <label>Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>