force-app/main/default/objects/Audit__c/fields/Audit_Status__c.field-meta.xml
<CustomField>
    <fullName>Audit_Status__c</fullName>
    <label>Audit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Complete - No findings</fullName>
            </value>
            <value>
                <fullName>Complete - Findings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>