force-app/main/default/objects/Audit__c/fields/AuditDueDate__c.field-meta.xml
<CustomField>
    <fullName>AuditDueDate__c</fullName>
    <label>Audit Due Date</label>
    <type>Date</type>
</CustomField>