force-app/main/default/objects/Audit__c/fields/AuditReceived__c.field-meta.xml
<CustomField>
    <fullName>AuditReceived__c</fullName>
    <label>Audit Received</label>
    <type>Date</type>
</CustomField>