force-app/main/default/objects/Audit__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contract this audit is auditing</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Audits</relationshipLabel>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>