force-app/main/default/objects/Audit__c/fields/CorrectiveActionRequired__c.field-meta.xml
<CustomField>
    <fullName>CorrectiveActionRequired__c</fullName>
    <label>Corrective Action Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>