force-app/main/default/objects/Audit__c/fields/DateofDeskReview__c.field-meta.xml
<CustomField>
    <fullName>DateofDeskReview__c</fullName>
    <label>Date of Desk Review</label>
    <type>Date</type>
</CustomField>