force-app/main/default/objects/Audit__c/fields/DateofMonitoringVisit__c.field-meta.xml
<CustomField>
    <fullName>DateofMonitoringVisit__c</fullName>
    <label>Date of Monitoring Visit</label>
    <type>Date</type>
</CustomField>