force-app/main/default/objects/Audit__c/fields/FindingsandorComments__c.field-meta.xml
<CustomField>
    <fullName>FindingsandorComments__c</fullName>
    <label>Findings and/or Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>