force-app/main/default/objects/Audit__c/fields/NoAuditRequiredCertificateonhand__c.field-meta.xml
<CustomField>
    <fullName>NoAuditRequiredCertificateonhand__c</fullName>
    <label>No Audit Required Certificate on hand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>