force-app/main/default/objects/Audit__c/fields/SingleFederalAuditRequired__c.field-meta.xml
<CustomField>
    <fullName>SingleFederalAuditRequired__c</fullName>
    <label>Single Federal Audit Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>